# FakemonRustBattleSimulator

./: Cargo.toml
res/: avance_tienda.txt  iconos.rar
src/: main.rs  mainFLTK.rs  mainOneWindow.rs
