[package]
name = "azul2"
version = "0.1.0"
authors = ["kevinbricenolinarez <kevinbricenolinarez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { git = "https://github.com/MoAlyousef/fltk-rs" }
reqwest = "0.10.6"